Finally fixed alignment hopefully

--- a/style.css
+++ b/style.css
@@ -200,17 +200,13 @@ color: #000000;
 
 /* Title */
 .title{
-    position: absolute;
-    width: 451px;
-    height: 82px;
-    left: 530px;
-    top: 200px;
+    text-align: center;
 
     font-family: 'K2D';
     font-style: normal;
     font-weight: 400;
     font-size: 64px;
-    line-height: 83px;
+    line-height: 100px;
     text-align: center;
 
     color: #000000;
@@ -218,15 +214,13 @@ color: #000000;
 
 /* Subtitle */
 .subtitle{
-    position: absolute;
-    left: 530px;
-    top: 315px;
+    text-align: center;
 
     font-family: 'K2D';
     font-style: normal;
     font-weight: 400;
     font-size: 32px;
-    line-height: 45px;
+    line-height: 50px;
     text-align: center;
 
     color: #000000;
